# labops-ai

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  README.md  compose.agent.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: api_server.json  diagnostic_bundle.json  health_thresholds.json  host_agent.json  host_agent_container.json  host_registry.json  incident_management.json  incident_signals.json  log_analyzer.json  network_connectivity.json  process_monitor.json  recovery_actions.json  run_history.json  service_monitor.json  system_health.json
config/profiles/container/: process_monitor.json  service_monitor.json
deploy/agent/: Dockerfile
logs/: application.log.sample
scripts/: manage_agent_systemd_user.sh  manage_api_systemd_user.sh  manage_systemd_user.sh
src/labops_ai/: __init__.py  __main__.py  health_status.py  system_health.py
src/labops_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/labops_ai/agent/: __init__.py  (+11 more)
tests/: __init__.py
tests/fixtures/: system_health_config_cases.json  system_health_monitor_cases.json
tests/integration/: test_config_utils.py  test_connectivity_loader.py  test_system_health_loader.py  test_threshold_loader.py
tests/support/: __init__.py  diagnostic_snapshot_factory.py  fixture_loader.py
tests/unit/: test_connectivity_config.py  test_connectivity_result.py  test_dns_checker.py  test_health_thresholds.py  test_system_health.py  test_system_health_config.py  test_tcp_checker.py
windows/LabOpsAI.HardwareBridge/: LabOpsAI.HardwareBridge.sln
(+286 files in other folders)
