[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labops-ai"
version = "0.1.0"
description = "Linux infrastructure monitoring, diagnostics, and automation platform."
requires-python = ">=3.12"
dependencies = [
    "psutil==7.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]